--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -63,7 +63,7 @@ const theme = createTheme({
 上述示例中，我们指定`pink`色系为主题色系，`green`色系为强调色，背景为`dark`。在我们的主题色系中，有跟[Material Design | color](https://material.io/design/color/#tools-for-picking-colors)同样的色系可供选择，背景色有亮色和暗色可选，关于背景色的定制，只需要改变
 palette 的 type 属性即可。
 
-关于字体、阴影、间距等的定制方式同上。
+关于字体、阴影、间距等定制方式同上。
 
 ## 组件的主题定制开发
 
