docs: Material Design 颜色系统

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -86,7 +86,7 @@ function MyComponent() {
 主题对象主要包括以下可定制的点：
 
 - [palette 颜色](/palette)。包括字体颜色、背景色、分隔符颜色等。
-- [typography 字体排版](/typography)。包括字体大小、字体类型、字重、字体颜色等。
+- [typography 文字排版](/typography)。包括字体大小、字体类型、字重、字体颜色等。
 - [shadows 阴影](/shadows)。
 - [transitions 动效](/transitions)。
 - [spacing 间距](/spacing)。
