--- a/docs/typography.mdx
+++ b/docs/typography.mdx
@@ -1,14 +1,14 @@
 ---
-name: 字体排版
+name: 文字排版
 route: /typography
 ---
 
 import TypographyDemo from './components/TypographyDemo';
 import FontSizeTool from './components/FontSizeTool';
 
-# 字体排版 typography
+# 文字排版 typography
 
-sinoui 字体排版遵循 [Material Design Typography](https://material.io/design/typography/the-type-system.html#type-scale)。
+sinoui 文字排版遵循 [Material Design Typography](https://material.io/design/typography/the-type-system.html#type-scale)。
 
 Material Design 的文字大小和样式是为了在典型使用条件下平衡内容密度和阅读舒适度而开发的。提供了以下分类：
 
@@ -191,7 +191,7 @@ const theme = createTheme({
 
 ## 主题定制
 
-可以通过`createTheme`自定义应用程序的字体排版。你可以设置默认字重、默认字体大小和默认字体家族，如下所示：
+可以通过`createTheme`自定义应用程序的文字排版。你可以设置默认字重、默认字体大小和默认字体家族，如下所示：
 
 ```tsx
 import { createTheme } from '@sinoui/theme';
@@ -211,7 +211,7 @@ const theme = createTheme({
 });
 ```
 
-也可以分别对每一个字体排版分类自定义样式：
+也可以分别对每一个文字排版分类自定义样式：
 
 ```ts
 import { createTheme } from '@sinoui/theme';
