--- a/docs/guide/typography.mdx
+++ b/docs/guide/typography.mdx
@@ -1,10 +1,11 @@
 ---
 name: 文字排版
 route: /typography
+menu: 开发指南
 ---
 
-import TypographyDemo from './components/TypographyDemo';
-import FontSizeTool from './components/FontSizeTool';
+import TypographyDemo from '@/TypographyDemo';
+import FontSizeTool from '@/FontSizeTool';
 
 # 文字排版 typography
 
