--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -116,7 +116,7 @@ const theme = createTheme({
   palette: {
     type: 'dark',
     primary: pink,
-    accent: green,
+    secondary: green,
   },
   typography: {
     fontSize: 16,
