--- a/docs/material-design/environment/surfaces.mdx
+++ b/docs/material-design/environment/surfaces.mdx
@@ -416,7 +416,7 @@ import surfaceopacityDont from './images/materialattributes-surfaceopacity-dont.
 
 ### 遮罩层 Scrim
 
-遮罩层是应用于材料表面的临时处理，目的是使表面上的内容不那么突出。他们有助于将用户注意力吸引到屏幕的其他部分，远离使用了遮罩层的表面。
+遮罩层是应用于材料表面的临时处理，目的是使表面上的内容不那么突出。它们有助于引导用户注意屏幕的其他部分，忽略界面上处理过的信息。
 
 可以有多种方式使用遮罩层，包括：
 
