--- a/docs/material-design/interaction/state.mdx
+++ b/docs/material-design/interaction/state.mdx
@@ -145,9 +145,9 @@ import error from './images/error.png';
 
 ### 叠加 Overlay
 
-在一个元素上方叠加半透明图层来代表状态，它提供了一种使用不透明度可视化状态的系统方法。
+在一个元素上方叠加半透明图层来代表状态，它提供了一种使用不透明度表达可视化状态的系统方法。
 
-叠加可以被应用于整个元素或在元素上方叠加半透明的圆形。叠加的颜色需要与元素本身的文字及图表颜色相符，如果再改变状态后文字和图标的颜色产生了变化，那叠加的颜色应该与文字和图标最后显示的颜色相符。
+叠加可以被应用于整个元素或在元素上方叠加半透明的圆形。叠加的颜色需要与元素本身的文字及图标的颜色相符，如果在改变状态后文字和图标的颜色产生了变化，那么叠加的颜色应该与文字和图标变化后的颜色相符。
 
 import elementsOverlay from './images/elements-overlay.png';
 import elementsElevation from './images/elements-elevation.png';
@@ -194,10 +194,10 @@ import opacityValues from './images/overlay-opacity-values.png';
 <ImageWithTitle img={opacityValues}>
   <ol>
     <li>
-      白色（#FFF）背景的叠加层颜色的不透明度值，采用黑色（#000）或者主题色（本例是#6200ee）的对应透明度值。
+      白色（#FFF）背景的叠加层颜色的不透明度值，采用半透明的黑色（#000）或者主题色（本例是#6200ee）。
     </li>
     <li>
-      在主题色#6200EE背景上的叠加层颜色的不透明度值，采用白色（#FFF）的对应不透明度。
+      在主题色#6200EE背景上的叠加层颜色的不透明度值，采用半透明的白色（#FFF）。
     </li>
   </ol>
 </ImageWithTitle>
@@ -231,14 +231,14 @@ import disabled2 from './images/disabled-02.png';
   </ol>
 </ImageWithTitle>
 
-有一些组件不能继承禁用状态：浮动操作按钮（FAB）、底部卡片、侧边卡片、工具提示、警告、导航型控件（如应用栏、标签栏、底部导航栏和步进器）。如果浮动操作按钮中的行为是无用的，则浮动操作按钮不应该出现在界面上。
+有一些组件不能继承禁用状态：浮动操作按钮（FAB）、底部 sheet、侧边 sheet、工具提示、警告、导航型控件（如应用栏、标签栏、底部导航栏和步进器）。如果浮动操作按钮是无用的，则不应该出现在界面上。
 
 import disabled03dont from './images/disabled-03-dont.png';
 
 <ImageWithTitle img={disabled03dont} status="no">
   <ol>
     <li>浮动操作按钮</li>
-    <li>底部卡片</li>
+    <li>底部sheet</li>
     <li>应用程序栏</li>
   </ol>
 </ImageWithTitle>
@@ -290,9 +290,9 @@ import composition from './images/composition.png';
 
 ### 使用 Usage
 
-悬停状态是指用户将鼠标放置在可交互元素上。悬停状态可用在所有可交互组件上，但不需要着重强调，以免对内容产生干扰。
+悬停状态是用户将鼠标放置在可交互元素上激发的。悬停状态可用在所有可交互组件上，但不需要着重强调，以免对内容产生干扰。
 
-叠加图层可用于悬停状态。它既可以用在整个组件上，也可以用于组件中的某个元素或者使用圆形图层叠加在组件上。
+叠加图层可用于悬停状态。它既可以用在整个组件上，也可以用于组件中的某个元素或者使用圆形叠加图层在组件上。
 
 import hover01 from './images/hover-01.png';
 import hover02 from './images/hover-02.png';
@@ -351,14 +351,14 @@ import hover05 from './images/hover-05.png';
   </ol>
 </ImageWithTitle>
 
-悬停状态不能被以下组件继承：应用程序栏、标签页、底部导航、卡片、对话框、警告、菜单、步进器。
+悬停状态不能被以下组件继承：应用程序栏、标签页、底部导航、sheet、对话框、警告、菜单、步进器。
 
 import hover06dont from './images/hover-06-dont.png';
 
 <ImageWithTitle img={hover06dont} status="no">
   <p>以下元素不能继承悬停状态：</p>
   <ol>
-    <li>卡片</li>
+    <li>sheet</li>
     <li>对话框</li>
     <li>应用程序栏</li>
   </ol>
@@ -366,7 +366,7 @@ import hover06dont from './images/hover-06-dont.png';
 
 ### 行为 Behavior
 
-悬停状态由用户使用光标在交互式元素上暂停而启动。
+悬停状态由用户使用光标在交互式元素上暂停而激发。
 
 import hoverMotion from './images/behavior-hover-motion.mp4';
 
@@ -499,7 +499,7 @@ import focus06dont from './images/focus-06-dont.png';
 <ImageWithTitle img={focus06dont} status="no">
   <p>以下元素不能继承聚焦状态：</p>
   <ol>
-    <li>卡片</li>
+    <li>sheet</li>
     <li>对话框</li>
     <li>应用程序栏</li>
   </ol>
@@ -546,7 +546,7 @@ import focusOne from './images/placement-focus-one.mp4';
 
 ### 叠加图层的不透明度值 Overlay opacity values
 
-为了确保合适的对比度和可访问性，图层叠加的颜色透明度应该根据不同的文字及背景组合来调整。当一个控件没有展现其他状态时，聚焦状态应该使用较高的透明度叠加。
+为了确保合适的对比度和可访问性，叠加图层的颜色透明度应该根据不同的文字及背景组合来调整。如果没有其它的视觉效果表示聚焦状态，那么应该使用较高不透明度的叠加图层。
 
 import overlaysFocus from './images/overlays-focus.png';
 
@@ -581,7 +581,7 @@ import overlaysFocus from './images/overlays-focus.png';
 
 ### 使用 Usage
 
-选中状态表示用户使用以下输入方法之一选择选项：轻触（tap）、鼠标、键盘或声音。选中状态给与中度重视，以便易于识别，但不分散注意力。
+选中状态表示用户使用以下输入方法之一选择选项：轻触（tap）、鼠标、键盘或声音。选中状态给予中度重视，以便易于识别，但不分散注意力。
 
 叠加图层可用于选中状态。它可以用于整个组件、组件中的元素。
 
@@ -668,7 +668,7 @@ import composition01 from './images/composition-01.png';
 
 ### 叠加图层不透明度值 Overlay opacity values
 
-为了确保合适的对比度和可访问性，图层叠加的颜色透明度应该根据不同的文字及背景组合来调整。选中状态的设计既要有辨识度，又不能对内容产生影响，因此它的强调程度为中等。
+为了确保合适的对比度和可访问性，叠加图层的颜色透明度应该根据不同的文字及背景组合来调整。选中状态的设计既要有辨识度，又不能对内容产生影响，因此它的强调程度为中等。
 
 import overlaysSelected from './images/overlays-selected.png';
 
@@ -693,6 +693,324 @@ import overlaysSelected from './images/overlays-selected.png';
         <li>
           <div>表面：图片</div>
           <div>叠加图层：24% #000000</div>
+        </li>
+      </Column>
+    </Row>
+  </ol>
+</ImageWithTitle>
+
+## 激活状态 Activated
+
+### 使用 Usage
+
+激活状态代表一组选项中当前正在被查看的选项。系统默认或者用户使用手指、鼠标、键盘或声音的输入方式进行选择。激活状态的强调程度应该为高等级。
+
+叠加图层、颜色改变或者其他应用在组件某个部分或元素上的视觉方案，均可用来表示激活状态。
+
+import activated01 from './images/activated-01.png';
+
+<ImageWithTitle img={activated01}>
+  <ol>
+    <li>叠加图层作为激活状态指示器。</li>
+    <li>下划线作为激活状态指示器。</li>
+  </ol>
+</ImageWithTitle>
+
+#### 激活状态继承 Activated state inheritance
+
+激活状态与选中状态不同，因为它传达了突出显示的目的。
+
+可以继承激活状态的组件包括：导航列表项、标签页选项、底部导航项、步进器项、可选择的纸片、或者切换按钮。
+
+import activated02 from './images/activated-02.png';
+
+<ImageWithTitle img={activated02}>
+  <div>图中展示了以下继承激活状态的组件：</div>
+  <ol>
+    <li>切换按钮</li>
+    <li>底部导航项</li>
+    <li>可选的纸片</li>
+    <li>标签页选项</li>
+  </ol>
+</ImageWithTitle>
+
+不可继承激活状态的组件包括：按钮、浮动操作按钮、选择控件、滑块、应用程序栏、底部 sheet、侧边 sheet、对话框、警告。
+
+import activated04Dont from './images/activated-04-dont.png';
+
+<ImageWithTitle img={activated04Dont} status="no">
+  按钮（1）和对话框（2）不能继承激活状态。
+</ImageWithTitle>
+
+### 行为
+
+激活状态可以默认初始化或者由用户选择形成。
+
+import behaviorActivationRipple from './images/behavior-activation-ripple.mp4';
+import behaviorActivationUserOrder from './images/behavior-activation-user-order.mp4';
+
+<Row gutter={48}>
+  <Column xs={24} sm={12}>
+    <ImageWithTitle video={behaviorActivationRipple}>
+      使用淡入淡出动画表示激活状态的出现和消失。
+    </ImageWithTitle>
+  </Column>
+  <Column xs={24} sm={12}>
+    <ImageWithTitle video={behaviorActivationUserOrder}>
+      激活状态按照用户点击的顺序显示。
+    </ImageWithTitle>
+  </Column>
+</Row>
+
+激活状态可以与悬停和聚焦状态组合。
+
+import behaviorActivateCombination from './images/behavior-activate-combination.png';
+
+<ImageWithTitle img={behaviorActivateCombination}>
+  激活状态与悬停（1）和聚焦（2）状态组合在一起显示。
+</ImageWithTitle>
+
+在一组选项中，同时只能有一个选项处于激活状态。
+
+import behaviorActivateCombination02 from './images/behavior-activate-combination-02.png';
+
+<ImageWithTitle img={behaviorActivateCombination02}>
+  在这个布局中，导航列表只能有激活项，只能有一个可选纸片被激活。
+</ImageWithTitle>
+
+### 叠加图层不透明度值 Overlay opacity values
+
+为了确保合适的对比度和可访问性，叠加图层的颜色不透明度应该根据不同的文字及背景组合来调整。由于激活状态并非总是用户触发的，因此激活状态的叠加图层拥有较高的不透明度值。
+
+import overlaysActivated from './images/overlays-activated.png';
+
+<ImageWithTitle img={overlaysActivated}>
+  <ol>
+    <Row gutter={48}>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：100% #FFFFFF</div>
+          <div>墨水：100% #6200EE</div>
+          <div>叠加图层：12% #6200EE</div>
+        </li>
+      </Column>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：100% #6200EE</div>
+          <div>墨水：100% #FFFFFF</div>
+          <div>叠加图层：24% #FFFFFF</div>
+        </li>
+      </Column>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：图片</div>
+          <div>叠加图层：36% #000000</div>
+        </li>
+      </Column>
+    </Row>
+  </ol>
+</ImageWithTitle>
+
+## 按下 Pressed
+
+### 使用 Usage
+
+按下状态是指用户使用手指、鼠标、键盘或声音等输入方式触发轻触或点击操作。按下状态可应用于所有可交互组件上。
+
+按下状态引起了一组内容的改变，并且强调程度为高等级。
+
+波纹叠加可表示按下状态。它可以应用于整个组件或组件中的元素，也可以应用于组件的一部分上的圆形。
+
+import pressed01 from './images/pressed-01.png';
+
+<ImageWithTitle img={pressed01}>
+  波纹叠加图层应用于：（1）组件中的元素；（2）整个组件；（3）圆形区域中。
+</ImageWithTitle>
+
+一些组件，如按钮、卡片，可以提升海拔来表示按下状态。
+
+import pressed02 from './images/pressed-02.png';
+
+<ImageWithTitle img={pressed02}>
+  海拔变化可应用于：（1）按钮；（2）卡片。
+</ImageWithTitle>
+
+#### 按下状态的继承 Pressed inheritance
+
+继承按下状态的组件包括：按钮、浮动操作按钮、切换按钮、选择控件、网格列表项、列表项、卡片、纸片、文本输入框和图标。
+
+import pressed03 from './images/pressed-03.png';
+
+<ImageWithTitle img={pressed03}>
+  整个组件，如图标（1）、文本输入框（2）、卡片（3）和按钮（4），继承按下状态。
+</ImageWithTitle>
+
+可交互的元素也具有按下状态。
+
+import pressed04 from './images/pressed-04.png';
+
+<ImageWithTitle img={pressed04}>
+  可交互元素或组件中的片段，如应用程序栏中的图标（1）、卡片中的操作（2）、标签页中的页签（3）和列表项（4），可继承按下状态。
+</ImageWithTitle>
+
+以下组件不应继承按下状态：应用程序栏、标签页、底部导航条、sheets、警告、菜单和步进器。
+
+import pressed05dont from './images/pressed-05-dont.png';
+
+<ImageWithTitle img={pressed05dont} status="no">
+  sheets（1）、对话框（2）、应用程序栏（3）这些组件不能继承按下状态。
+</ImageWithTitle>
+
+### 行为 Behavior
+
+按下状态是用户使用键盘、鼠标或声音输入操作一个可交互元素而触发的。
+
+import behaviorPressedMotion from './images/behavior-pressed-motion.mp4';
+
+<ImageWithTitle video={behaviorPressedMotion}>
+  使用波纹动画表达按下状态的出现和消失。
+</ImageWithTitle>
+
+按下状态可以与悬停、聚焦、激活、或选中状态组合。
+
+import behaviorPressedCombination from './images/behavior-pressed-combination.png';
+
+<ImageWithTitle img={behaviorPressedCombination}>
+  按下状态分别与悬停（1）、聚焦（2）、选中（3）和激活（4）状态相组合。
+</ImageWithTitle>
+
+在一个布局中同时应该只会有一个单一的按下状态。
+
+import behaviorPressedOne from './images/behavior-pressed-one.mp4';
+
+<ImageWithTitle video={behaviorPressedOne} />
+
+### 叠加图层不透明度值 Overlay opacity values
+
+为了确保合适的对比度和可访问性，叠加图层的颜色透明度应该根据不同的文字及背景组合来调整。因为按下触发了布局的改变，因此它们的不透明度值应该较高。
+
+import overlaysPressed from './images/overlays-pressed.png';
+
+<ImageWithTitle img={overlaysPressed}>
+  <ol>
+    <Row gutter={48}>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：100% #FFFFFF</div>
+          <div>墨水：100% #000000</div>
+          <div>叠加图层：16% #000000</div>
+        </li>
+      </Column>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：100% #6200EE</div>
+          <div>墨水：100% #FFFFFF</div>
+          <div>叠加图层：32% #FFFFFF</div>
+        </li>
+      </Column>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：图片</div>
+          <div>叠加图层：48% #000000</div>
+        </li>
+      </Column>
+    </Row>
+  </ol>
+</ImageWithTitle>
+
+## 拖动状态 Dragged
+
+### 使用 Usage
+
+拖动状态是在用户按下并移动元素或者组件时被触发。拖动状态应是低级别的强调，以避免分散用户的注意力。
+
+叠加图层可用来表达拖动状态。它用应用到整个组件或者组件中的元素。
+
+import dragged01 from './images/dragged-01.png';
+
+<ImageWithTitle img={dragged01}>
+  叠加图层应用于组件中的元素（1）或者整个组件（2）。
+</ImageWithTitle>
+
+一些组件，如列表项、纸片或者卡片，可使用海拔来表示拖动状态。
+
+import dragged02 from './images/dragged-02.png';
+
+<ImageWithTitle img={dragged02}>
+  海拔应用于卡片（1）和列表项（2）中。
+</ImageWithTitle>
+
+#### 拖动状态继承
+
+可继承拖动状态的组件包括：网格列表项、列表项、卡片和纸片。
+
+import dragged03 from './images/dragged-03.png';
+
+<ImageWithTitle img={dragged03}>
+  列表项（1）、网格列表项（2）、卡片（3）和纸片（4）课继承拖动状态。
+</ImageWithTitle>
+
+以下组件不能继承拖动状态：应用程序栏、按钮、底部导航栏、对话框、警告、菜单或者步进器。
+
+import dragged04dont from './images/dragged-04-dont.png';
+
+<ImageWithTitle status="no" img={dragged04dont}>
+  按钮（1）、应用程序栏（2）、对话框（3）、文本输入框（4）等组件不能继承拖动状态。
+</ImageWithTitle>
+
+### 行为 Behavior
+
+拖动状态是用户使用手指或鼠标按下并保持这一操作来触发的。
+
+import behaviorDraggedMotion from './images/behavior-dragged-motion.mp4';
+import behaviorDraggedTouch from './images/behavior-dragged-touch.mp4';
+
+<Row gutter={48}>
+  <Column xs={24} sm={12}>
+    <ImageWithTitle video={behaviorDraggedMotion}>
+      拖动状态发生在按下状态之后，并且用淡入淡出动画表示其出现和消失。
+    </ImageWithTitle>
+  </Column>
+  <Column xs={24} sm={12}>
+    <ImageWithTitle video={behaviorDraggedTouch}>
+      用户的触摸应直接控制所拖动元素的移动。
+    </ImageWithTitle>
+  </Column>
+</Row>
+
+同一个布局中同时应只有一个单一的拖动状态。
+
+import behaviorDraggedOne from './images/behavior-dragged-one.mp4';
+
+<ImageWithTitle video={behaviorDraggedOne}>单一的拖动状态。</ImageWithTitle>
+
+### 叠加图层不透明度值 Overlay opacity values
+
+为了确保合适的对比度和可访问性，叠加图层的颜色透明度应该根据不同的文字及背景组合来调整。为了避免用户在当前内容中分心， 拖动状态的透明度数值应该较低。
+
+import overlaysDragged from './images/overlays-dragged.png';
+
+<ImageWithTitle img={overlaysDragged}>
+  <ol>
+    <Row gutter={48}>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：100% #FFFFFF</div>
+          <div>墨水：100% #000000</div>
+          <div>叠加图层：8% #000000</div>
+        </li>
+      </Column>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：100% #6200EE</div>
+          <div>墨水：100% #FFFFFF</div>
+          <div>叠加图层：16% #FFFFFF</div>
+        </li>
+      </Column>
+      <Column xs={24} sm={8}>
+        <li>
+          <div>表面：图片</div>
+          <div>叠加图层：32% #000000</div>
         </li>
       </Column>
     </Row>
